--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ember-cli-hbars",
-  "version": "0.1.0",
+  "repository": "https://github.com/code0100fun/ember-cli-hbars.git",
+  "version": "0.1.5",
   "description": "Haml to Handlebars/HTMLBars template engine",
   "main": "index.js",
   "scripts": {
@@ -23,7 +24,7 @@
   "license": "ISC",
   "dependencies": {
     "broccoli-filter": "^0.1.10",
-    "hbars": "^0.1.1"
     "ember-cli-version-checker": "^1.0.2",
+    "hbars": "^0.1.5"
   }
 }
